--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
